# crucible

./: .env.example  .gitignore  .hfignore  BLOG.md  HF_BLOG_POST.md  README.md  SLIDES.md  main.py  requirements.txt
.cursor/rules/: crucible.mdc
agents/: arbiter.py  architect.py  executor.py  vendor.py
core/: config.py  episode_runner.py  llm_client.py  regulation_shock.py  schemas.py
crucible_env/: Dockerfile  README.md  client.py  models.py  openenv.yaml  pyproject.toml
crucible_env/agents/: arbiter.py  architect.py  executor.py  vendor.py
crucible_env/core/: schemas.py  world_state.py
crucible_env/domains/procurement/: tasks.py
crucible_env/server/: Dockerfile  app.py  crucible_environment.py
crucible_env/training/: crucible_grpo.ipynb
crucible_env/utils/: diversity.py  llm_client.py
demo/: dashboard.py  failure_injector.py  gradio_app.py
domains/eu_procurement/: tasks.py
eval/: regression_checker.py
prompts/: crucible-cursor-prompts.md
scripts/: deploy_hf_space.py  generate_demo_data.py  inject_nb_outputs.py  run_full_training.py  run_groq_verify.py  test_rate_limiter.py
training/: grpo_loop.py
utils/: clauses.py  llm_client.py
