[project]
name = "openenv-crucible-env"
version = "0.1.0"
description = "CRUCIBLE self-improving RL environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "huggingface_hub>=1.0.0",
  "anthropic>=0.40.0",
  "pydantic>=2.0.0",
  "streamlit>=1.35.0",
  "plotly>=5.20.0",
  "pandas>=2.0.0",
  "wandb>=0.17.0",
]

[project.scripts]
server = "crucible_env.server.app:app"

[tool.setuptools]
include-package-data = true
