[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-crucible-env"
version = "0.1.0"
description = "CRUCIBLE self-improving RL environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.3",
  "huggingface_hub>=1.0.0",
  "anthropic>=0.40.0",
  "pydantic>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "groq>=0.11.0",
]

[project.scripts]
server = "crucible_env.server.app:app"

[tool.setuptools]
include-package-data = true
py-modules = ["client", "models"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "agents",
  "agents.*",
  "core",
  "core.*",
  "domains",
  "domains.*",
  "server",
  "server.*",
  "utils",
  "utils.*",
]
